--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -55,6 +56,7 @@
 		</dependency>
 
 	</dependencies>
+	
 
 	<build>
 		<plugins>
@@ -70,6 +72,12 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			
+            <plugin>
+                     <groupId>org.apache.maven.plugins</groupId>
+                     <artifactId>maven-resources-plugin</artifactId>
+                     <version>3.1.0</version>
+            </plugin>
 		</plugins>
 	</build>
 
