--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
 		</dependency>
 
 	</dependencies>
-	
+	<distributionManagement>
+	    <repository>
+	    <id> deploymentRepo</id>
+		<url>http://192.168.0.14:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
