--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
      - AppNet
      
   spring-boot:
-    image: salsabil111/springprojet
+    image: salsabil1/springprojet
     container_name: spring
     ports:
       - 8082:8082
