--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,14 @@
 		</plugins>
 		<finalName>springprojet</finalName>
 	</build>
+	
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
+			<url>http://localhost:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 
 
 
