--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,14 @@
 		</plugins>
 		<finalName>springprojet</finalName>
 	</build>
+	
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
+			<url>http://192.168.33.10:8081/repository/simpleapp-release/</url>
+		</repository>
+	</distributionManagement>
 
 
 
